[project]
name = "opents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "chronos-forecasting>=2.2.2",
    "datasets>=4.4.2",
    "einops>=0.8.1",
    "einops-exts>=0.0.4",
    "huggingface-hub>=0.36.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "open-clip-torch>=3.2.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pyvim>=3.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "wfdb>=4.3.0",
]
